cli/tests/snapshots/skills__wukong_skills_archive_help.snap
---
source: cli/tests/skills.rs
assertion_line: 27
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
Archive installed skills (move out of active folder, reversible)

Usage: wukong skills archive [OPTIONS]

Options:
  -v, --verbose...  Use verbos output. More output per occurrence.
                    
                    By default, it'll only report errors.
                    `-v` show warnings
                    `-vv` show info
                    `-vvv` show debug
                    `-vvvv` show trace
  -q, --quiet...    Do not print log message
      --report      Store the debugging log in the log file, which is located at ~/.config/wukong
      --canary      Use the Canary channel API
  -h, --help        Print help
