cli/tests/snapshots/skills__wukong_skills_help.snap
---
source: cli/tests/skills.rs
assertion_line: 13
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
This command group contains the commands to manage agent skills locally

Usage: wukong skills [OPTIONS] <COMMAND>

Commands:
  list     Display all available skills from the registry
  find     Search for skills by keyword
  init     Scaffold a new skill at ./.claude/skills/<name>/SKILL.md (interactive)
  publish  Publish a local skill to the internal skills registry repo
  add      Install one or more skills from the registry locally
  remove   Remove installed skills from local and global skill directories
  update   Update all outdated installed skills from the registry
  archive  Archive installed skills (move out of active folder, reversible)
  restore  Restore previously archived skills
  help     Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...  Use verbos output. More output per occurrence.
                    
                    By default, it'll only report errors.
                    `-v` show warnings
                    `-vv` show info
                    `-vvv` show debug
                    `-vvvv` show trace
  -q, --quiet...    Do not print log message
      --report      Store the debugging log in the log file, which is located at ~/.config/wukong
      --canary      Use the Canary channel API
  -h, --help        Print help
